--- a/style.css
+++ b/style.css
@@ -1,45 +1,19 @@
 body {
-    font-family: "Roboto Mono", monospace;
+background-color: #ffcbdb;
+}
+
+p {
     text-align: center;
-    background-image: url("https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/background_mentalista.png");
-    background-color: #000000;
-    background-size: cover;
-    background-position: center top;
-    background-repeat: no-repeat;
-    height: 100vh;
-  }
-  
-  .container {
+}
+
+h1{
     text-align: center;
-    padding: 20px;
-  }
-  
-  .page-title {
-    color: #ffffff;
-    margin: 0 0 5px;
-  }
-  
-  .page-subtitle {
-    color: #ffffff;
-    margin-top: 5px;
-  }
-  
-  .page-logo {
-    width: 200px;
-  }
-  
-  .alura-logo {
-    width: 40px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  
-  body > img {
-    margin: 0 10px;
-  }
-  
-  img {
-    max-height: 350px;
-  }
-  
+    font-family: sans-serif;
+    color: #fc0fc0;
+}
+
+h2{
+    text-align: center;
+    font-family: sans-serif;
+    color: #FFFFFF; 
+}
